--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "author": "Suan-Aik Yeo <yeosuanaik@gmail.com>",
-  "name": "instant-markdown-d",
-  "description": "Instantly-updating Markdown Server",
-  "version": "0.1.0",
+  "contributors": [
+      "XadillaX <i@2333.moe>"
+  ],
+  "name": "instant-markdown-x",
+  "description": "Instantly-updating Markdown Server.",
+  "version": "0.2.0",
   "engine": "node",
-  "main": "instant-markdown-d",
+  "main": "instant-markdown-x",
   "preferGlobal": "true",
   "bin": {
-    "instant-markdown-d": "./instant-markdown-d"
+    "instant-markdown-d": "./instant-markdown-x"
   },
   "dependencies": {
-    "highlight.js": "^8.4.0",
-    "markdown-it": "^3.0.3",
-    "send": "~0.1.0",
-    "socket.io": ""
+    "highlight.js": "^9.3.0",
+    "markdown-it": "^6.0.1",
+    "send": "^0.13.2",
+    "socket.io": "^1.4.5"
   }
 }
